field-forms/objects/Brand_Theme__c/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <description>Optional. When set, this is a FORM-level theme that overrides the brand-level theme for that specific template.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Brand Themes</relationshipLabel>
    <relationshipName>Brand_Themes</relationshipName>
    <type>Lookup</type>
</CustomField>