field-forms/objects/Brand_Theme__c/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <description>Brand header / title text shown at the top of the report (e.g. "Burger King - Food Safety Inspection").</description>
    <label>Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>