field-forms/objects/Brand_Theme__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>Locale code for the branded output (e.g. en_US, es_MX). Reserved for multi-language report generation.</description>
    <label>Locale</label>
    <length>10</length>
    <type>Text</type>
</CustomField>