field-forms/objects/Brand_Theme__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>URL to the brand logo image, rendered in the form header and PDF. (A ContentVersion-backed logo can replace this later.)</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>