field-forms/objects/Brand_Theme__c/fields/Output_Template_Html__c.field-meta.xml
<CustomField>
    <fullName>Output_Template_Html__c</fullName>
    <description>HTML output template (with {{merge}} tokens) that mirrors the customer's provided report layout. When present, the branded PDF renders from this template instead of the default fixed layout. AI-drafted from the customer's document, then polished. Tokens: {{brand.logo}}, {{brand.headerText}}, {{report.formName|status|completedDate|workOrder|serviceSummary}}, {{answers}}, {{findings}}, {{signature}}, {{answer:Question Label}}. (Vignette 4)</description>
    <label>Output Template HTML</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>