field-forms/objects/Brand_Theme__c/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <description>Brand primary color as a hex string (e.g. #E4002B). Drives the form accent and PDF header.</description>
    <label>Primary Color</label>
    <length>9</length>
    <type>Text</type>
</CustomField>