field-forms/objects/Brand_Theme__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Brand partition key, matching Account.Form_Scope__c / Form_Template__c.Scope__c. Null = global default theme.</description>
    <label>Scope</label>
    <length>80</length>
    <type>Text</type>
</CustomField>