field-forms/objects/Brand_Theme__c/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <description>Brand secondary/accent color as a hex string (e.g. #FFC72C).</description>
    <label>Secondary Color</label>
    <length>9</length>
    <type>Text</type>
</CustomField>