field-forms/objects/Brand_Theme__c/fields/Section_Order__c.field-meta.xml
<CustomField>
    <fullName>Section_Order__c</fullName>
    <description>Optional JSON array of section titles in the brand's preferred display order for the report. Empty = use the template's native Order__c.</description>
    <label>Section Order (JSON)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>